--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "axios": "^1.7.8",
     "express": "^4.18.2",
-    "moment": "^2.29.4"
+    "moment": "^2.29.4",
+    "node-binance-api": "^0.13.1",
+    "technicalindicators": "^3.1.0"
   }
 }
